Implement b tree data structure

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -76,6 +76,16 @@ target_sources(binary_tree
   ${BINARY_TREE_SRC}
 )
 
+set(B_TREE_SRC
+  ${CMAKE_CURRENT_SOURCE_DIR}/src/b_tree.c
+  )
+
+add_executable(b_tree)
+target_sources(b_tree
+ PRIVATE
+  ${B_TREE_SRC}
+)
+
 set(AVL_TREE_SRC
   ${CMAKE_CURRENT_SOURCE_DIR}/src/avl_tree.c
   )
